[gd_scene load_steps=29 format=3 uid="uid://bmrh33qw4yulm"]

[ext_resource type="Script" uid="uid://ce60pkk68q7ns" path="res://core/maze_tilemap.gd" id="1_oaaqp"]
[ext_resource type="FontFile" uid="uid://crkugn6nm3qtn" path="res://materials/Super Mario World Text Box.ttf" id="4_2vdv0"]
[ext_resource type="Texture2D" uid="uid://c2putltgbrngm" path="res://materials/tiles.png" id="4_54t4n"]
[ext_resource type="LabelSettings" uid="uid://bd23xiii34qxm" path="res://core/money_counter.tres" id="4_jevav"]
[ext_resource type="LabelSettings" uid="uid://d4lkooy4is0y5" path="res://core/tile_sprite_label_settings.tres" id="6_54t4n"]
[ext_resource type="AudioStream" uid="uid://c2sj4byar8u82" path="res://sound/key-pickup.ogg" id="7_pj6q1"]
[ext_resource type="AudioStream" uid="uid://w6yqhc48xydn" path="res://sound/door-open.ogg" id="8_xnntf"]
[ext_resource type="AudioStream" uid="uid://dt4fqa1dwgl8y" path="res://sound/wall-impact-1.ogg" id="8_yco2g"]
[ext_resource type="AudioStream" uid="uid://d3lurp4c7hpkx" path="res://sound/wall-impact-2.ogg" id="9_8bc3i"]
[ext_resource type="AudioStream" uid="uid://bsmbcsstf1doq" path="res://sound/wall-break.ogg" id="10_vh4fh"]
[ext_resource type="AudioStream" uid="uid://c87tti1rujugb" path="res://sound/metro_open.ogg" id="11_8bc3i"]
[ext_resource type="AudioStream" uid="uid://dqg8uhcpbdmkn" path="res://sound/metro-use.ogg" id="12_vh4fh"]
[ext_resource type="AudioStream" uid="uid://c5ivomf0dlnek" path="res://sound/powerup.ogg" id="13_7ubop"]
[ext_resource type="AudioStream" uid="uid://dycvauuwtlty" path="res://sound/money.wav" id="16_jevav"]
[ext_resource type="AudioStream" uid="uid://bcpku4jit6qhy" path="res://sound/complete.ogg" id="17_4vtj7"]
[ext_resource type="PackedScene" uid="uid://d3iw1vvke2moh" path="res://core/mesh_tile_map.tscn" id="18_nea3f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7qn0m"]
atlas = ExtResource("4_54t4n")
region = Rect2(32, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_jevav"]
font = ExtResource("4_2vdv0")
font_size = 12
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_xnntf"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.05882353, 0.08235294, 0.13725491, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2vdv0"]
gradient = SubResource("Gradient_xnntf")
width = 1000
height = 1000

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lrlfx"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("7_pj6q1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4vtj7"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("8_xnntf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7ubop"]
random_pitch = 1.05
streams_count = 2
stream_0/stream = ExtResource("8_yco2g")
stream_1/stream = ExtResource("9_8bc3i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xnntf"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("10_vh4fh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vh4fh"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("11_8bc3i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2vdv0"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("12_vh4fh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jevav"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("13_7ubop")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nea3f"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("16_jevav")

[node name="TileMapLayer" type="Node2D"]
script = ExtResource("1_oaaqp")
ui_size = 5

[node name="Player" type="Sprite2D" parent="."]
z_index = 5
texture_filter = 1
position = Vector2(-61, 162)
texture = SubResource("AtlasTexture_7qn0m")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="UI" type="MarginContainer" parent="Player/Camera2D"]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopLeft" type="VBoxContainer" parent="Player/Camera2D/UI"]
layout_mode = 2
size_flags_horizontal = 0

[node name="KeysHeader" type="Label" parent="Player/Camera2D/UI/TopLeft"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
text = "Keys in inventory:"
label_settings = ExtResource("6_54t4n")
autowrap_trim_flags = 0
justification_flags = 0

[node name="KeysLabel" type="Label" parent="Player/Camera2D/UI/TopLeft"]
layout_mode = 2
label_settings = ExtResource("6_54t4n")

[node name="TorchHeader" type="Label" parent="Player/Camera2D/UI/TopLeft"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
text = "Torches left:"
label_settings = ExtResource("6_54t4n")
autowrap_trim_flags = 0
justification_flags = 0

[node name="TorchesLabel" type="Label" parent="Player/Camera2D/UI/TopLeft"]
texture_filter = 1
layout_mode = 2
text = "(1,3)"
label_settings = ExtResource("6_54t4n")

[node name="TopCenter" type="CenterContainer" parent="Player/Camera2D/UI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TimeLabel" type="Label" parent="Player/Camera2D/UI/TopCenter"]
layout_mode = 2
text = "60.0s"
label_settings = SubResource("LabelSettings_jevav")

[node name="TopRight" type="VBoxContainer" parent="Player/Camera2D/UI"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MoneyLabel" type="Label" parent="Player/Camera2D/UI/TopRight"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.0333333, 1)
text = "50$"
label_settings = ExtResource("4_jevav")
horizontal_alignment = 1
autowrap_trim_flags = 0
justification_flags = 0

[node name="Sprite2D" type="Sprite2D" parent="Player"]
z_index = -10
texture = SubResource("GradientTexture2D_2vdv0")

[node name="Tiles" type="Node2D" parent="."]
visible = false

[node name="AudioKeyPickup" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_lrlfx")

[node name="AudioDoorOpen" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_4vtj7")

[node name="AudioBreakWallImpact" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7ubop")

[node name="AudioBreakWall" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xnntf")
pitch_scale = 1.2

[node name="AudioMetroOpen" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_vh4fh")
pitch_scale = 1.2

[node name="AudioMetroUse" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_2vdv0")
pitch_scale = 1.2

[node name="AudioPowerupPickup" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_jevav")
pitch_scale = 1.2

[node name="AudioMoney" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_nea3f")
pitch_scale = 1.2
max_polyphony = 5

[node name="AudioComplete" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_4vtj7")
max_polyphony = 5

[node name="MeshTileMap" parent="." instance=ExtResource("18_nea3f")]
wide = 11
shuffling = false
